# intermediate-data-visualization-with-seaborn

./: README.md  pyproject.toml
week 1/: introduction_seaborn.py  regresion_plots_in_seaborn.py  using_distribution_plot.py
